// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FactoriesOverviewStationCard > renders correctly in mobileView 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-1 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    
    <div
      class="chart"
      data-v-f1d1dcbe=""
      id="element-chart1"
    >
      <svg
        class="chart-svg"
        height="80"
        width="0"
      >
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.25;"
        />
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.5;"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 0.25; transform: translate(30px, 8px);"
          text-anchor="end"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 1; transform: translate(30px, 8px);"
          text-anchor="end"
        >
          <path
            class="domain"
            d="M0.5,65.5V0.5"
            stroke="currentColor"
          />
        </g>
        <line
          style="fill: none; stroke: rgb(255, 255, 255); stroke-width: 2px;"
          x1="20"
          x2="0"
          y1="88"
          y2="88"
        />
        <path
          style="fill: none;"
        />
      </svg>
    </div>
    <div
      class="text-body-small mt-auto mb-0"
      data-v-f1d1dcbe=""
    >
      <div
        data-v-f1d1dcbe=""
        id="chart-text1"
      >
        Production speed ({unit}/min) – last hour
      </div>
    </div>
    
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly in xl view 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-2 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    
    <div
      class="chart"
      data-v-f1d1dcbe=""
      id="element-chart1"
    >
      <svg
        class="chart-svg"
        height="90"
        width="0"
      >
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.25;"
        />
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.5;"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 0.25; transform: translate(30px, 8px);"
          text-anchor="end"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 1; transform: translate(30px, 8px);"
          text-anchor="end"
        >
          <path
            class="domain"
            d="M0.5,75.5V0.5"
            stroke="currentColor"
          />
        </g>
        <line
          style="fill: none; stroke: rgb(255, 255, 255); stroke-width: 2px;"
          x1="20"
          x2="0"
          y1="88"
          y2="88"
        />
        <path
          style="fill: none;"
        />
      </svg>
    </div>
    <div
      class="text-body-small mt-auto mb-0"
      data-v-f1d1dcbe=""
    >
      <div
        data-v-f1d1dcbe=""
        id="chart-text1"
      >
        Production speed ({unit}/min) – last hour
      </div>
    </div>
    
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly when last slice is fast product 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-2 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    
    <div
      class="chart"
      data-v-f1d1dcbe=""
      id="element-chart1"
    >
      <svg
        class="chart-svg"
        height="90"
        width="0"
      >
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.25;"
        />
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.5;"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 0.25; transform: translate(30px, 8px);"
          text-anchor="end"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 1; transform: translate(30px, 8px);"
          text-anchor="end"
        >
          <path
            class="domain"
            d="M0.5,75.5V0.5"
            stroke="currentColor"
          />
        </g>
        <line
          style="fill: none; stroke: rgb(255, 255, 255); stroke-width: 2px;"
          x1="20"
          x2="0"
          y1="88"
          y2="88"
        />
        <path
          style="fill: none;"
        />
      </svg>
    </div>
    <div
      class="text-body-small mt-auto mb-0"
      data-v-f1d1dcbe=""
    >
      <div
        data-v-f1d1dcbe=""
        id="chart-text1"
      >
        Production speed ({unit}/min) – last hour
      </div>
    </div>
    
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly when last slice is fast product and alternative unit is visible 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-2 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    
    <div
      class="chart"
      data-v-f1d1dcbe=""
      id="element-chart1"
    >
      <svg
        class="chart-svg"
        height="90"
        width="0"
      >
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.25;"
        />
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.5;"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 0.25; transform: translate(30px, 8px);"
          text-anchor="end"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 1; transform: translate(30px, 8px);"
          text-anchor="end"
        >
          <path
            class="domain"
            d="M0.5,75.5V0.5"
            stroke="currentColor"
          />
        </g>
        <line
          style="fill: none; stroke: rgb(255, 255, 255); stroke-width: 2px;"
          x1="20"
          x2="0"
          y1="88"
          y2="88"
        />
        <path
          style="fill: none;"
        />
      </svg>
    </div>
    <div
      class="text-body-small mt-auto mb-0"
      data-v-f1d1dcbe=""
    >
      <div
        data-v-f1d1dcbe=""
        id="chart-text1"
      >
        Production speed ({unit}/min) – last hour
      </div>
    </div>
    
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly when last slice is planned stoppage 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-2 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    
    <div
      class="chart"
      data-v-f1d1dcbe=""
      id="element-chart1"
    >
      <svg
        class="chart-svg"
        height="90"
        width="0"
      >
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.25;"
        />
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.5;"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 0.25; transform: translate(30px, 8px);"
          text-anchor="end"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 1; transform: translate(30px, 8px);"
          text-anchor="end"
        >
          <path
            class="domain"
            d="M0.5,75.5V0.5"
            stroke="currentColor"
          />
        </g>
        <line
          style="fill: none; stroke: rgb(255, 255, 255); stroke-width: 2px;"
          x1="20"
          x2="0"
          y1="88"
          y2="88"
        />
        <path
          style="fill: none;"
        />
      </svg>
    </div>
    <div
      class="text-body-small mt-auto mb-0"
      data-v-f1d1dcbe=""
    >
      <div
        class="d-flex justify-space-between"
        data-v-f1d1dcbe=""
      >
        <span
          data-v-f1d1dcbe=""
        >
          planned stoppage
        </span>
        <span
          data-v-f1d1dcbe=""
        />
      </div>
    </div>
    
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly when last slice is slow product 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-2 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    
    <div
      class="chart"
      data-v-f1d1dcbe=""
      id="element-chart1"
    >
      <svg
        class="chart-svg"
        height="90"
        width="0"
      >
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.25;"
        />
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.5;"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 0.25; transform: translate(30px, 8px);"
          text-anchor="end"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 1; transform: translate(30px, 8px);"
          text-anchor="end"
        >
          <path
            class="domain"
            d="M0.5,75.5V0.5"
            stroke="currentColor"
          />
        </g>
        <line
          style="fill: none; stroke: rgb(255, 255, 255); stroke-width: 2px;"
          x1="20"
          x2="0"
          y1="88"
          y2="88"
        />
        <path
          style="fill: none;"
        />
      </svg>
    </div>
    <div
      class="text-body-small mt-auto mb-0"
      data-v-f1d1dcbe=""
    >
      <div
        data-v-f1d1dcbe=""
        id="chart-text1"
      >
        Production speed ({unit}/min) – last hour
      </div>
    </div>
    
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly when last slice is standby 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-2 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    
    <div
      class="chart"
      data-v-f1d1dcbe=""
      id="element-chart1"
    >
      <svg
        class="chart-svg"
        height="90"
        width="0"
      >
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.25;"
        />
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.5;"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 0.25; transform: translate(30px, 8px);"
          text-anchor="end"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 1; transform: translate(30px, 8px);"
          text-anchor="end"
        >
          <path
            class="domain"
            d="M0.5,75.5V0.5"
            stroke="currentColor"
          />
        </g>
        <line
          style="fill: none; stroke: rgb(255, 255, 255); stroke-width: 2px;"
          x1="20"
          x2="0"
          y1="88"
          y2="88"
        />
        <path
          style="fill: none;"
        />
      </svg>
    </div>
    <div
      class="text-body-small mt-auto mb-0"
      data-v-f1d1dcbe=""
    >
      <div
        class="d-flex justify-space-between"
        data-v-f1d1dcbe=""
      >
        <span
          data-v-f1d1dcbe=""
        >
          test standby comment
        </span>
        <span
          data-v-f1d1dcbe=""
        />
      </div>
    </div>
    
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly when last slice is stoppage 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-2 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    
    <div
      class="chart"
      data-v-f1d1dcbe=""
      id="element-chart1"
    >
      <svg
        class="chart-svg"
        height="90"
        width="0"
      >
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.25;"
        />
        <path
          style="transform: translate(40px, 8px); fill: rgb(0, 0, 0); opacity: 0.5;"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 0.25; transform: translate(30px, 8px);"
          text-anchor="end"
        />
        <g
          class="grid"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="opacity: 1; transform: translate(30px, 8px);"
          text-anchor="end"
        >
          <path
            class="domain"
            d="M0.5,75.5V0.5"
            stroke="currentColor"
          />
        </g>
        <line
          style="fill: none; stroke: rgb(255, 255, 255); stroke-width: 2px;"
          x1="20"
          x2="0"
          y1="88"
          y2="88"
        />
        <path
          style="fill: none;"
        />
      </svg>
    </div>
    <div
      class="text-body-small mt-auto mb-0"
      data-v-f1d1dcbe=""
    >
      <div
        class="d-flex justify-space-between"
        data-v-f1d1dcbe=""
      >
        <span
          data-v-f1d1dcbe=""
        >
          Uncommented stop
        </span>
        <span
          data-v-f1d1dcbe=""
        />
      </div>
    </div>
    
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly when theres no active shift 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="text-primary-light mt-2 d-flex flex-column text-body-medium flex-nowrap white-space-nowrap flex-shrink-0 flex-grow-1"
    data-v-f1d1dcbe=""
  >
    <!-- shift qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift total quantity / idealqty"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- batch & batch qty -->
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="true"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Since changeover / Target"
      viewportmargin="12"
      zindex="2000"
    />
    <!-- progressbar -->
    <div
      class="lineview-progress my-2"
      data-v-f1d1dcbe=""
      id="progress1"
    >
      <div
        class="progress"
        data-v-f1d1dcbe=""
        style="width: 50%;"
      />
    </div>
    <div
      class="text-center my-auto text-body-small"
      data-v-f1d1dcbe=""
    >
      <div
        class="text-uppercase"
        data-v-f1d1dcbe=""
      >
        No active shift
      </div>
      <div
        data-v-f1d1dcbe=""
      >
        Please check back later or edit settings
      </div>
    </div>
  </div>
</v-card-stub>
`;

exports[`FactoriesOverviewStationCard > renders correctly when theres no data 1`] = `
<v-card-stub
  border="false"
  class="px-4 py-3 cursor-move d-flex flex-column"
  color="black"
  data-v-f1d1dcbe=""
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  height="246px"
  hover="false"
  loading="false"
  replace="false"
  ripple="true"
  tag="div"
  tile="false"
  variant="elevated"
>
  <!-- header -->
  <div
    class="d-flex align-start justify-space-between flex-nowrap flex-shrink-1 flex-grow-0 text-primary-light"
    data-v-f1d1dcbe=""
  >
    <span
      class="text-headline-small line-clamp-2-28 cursor-pointer"
      data-v-f1d1dcbe=""
    >
      Evocon Test Station 1
    </span>
    <v-tooltip-stub
      activatorprops="[object Object]"
      attach="false"
      closeonback="false"
      closeoncontentclick="false"
      contained="false"
      data-v-f1d1dcbe=""
      disabled="false"
      eager="true"
      interactive="false"
      location="top right"
      locationstrategy="connected"
      minwidth="0"
      modelvalue="false"
      noclickanimation="false"
      offset="10"
      openonclick="false"
      openonhover="true"
      origin="auto"
      persistent="false"
      scrim="false"
      scrollstrategy="reposition"
      sticktotarget="false"
      text="Shift OEE"
      viewportmargin="12"
      zindex="2000"
    />
  </div>
  <div
    class="d-flex justify-center align-center flex-grow-1 flex-shrink-0"
    data-v-f1d1dcbe=""
  >
    <v-img-stub
      absolute="false"
      cover="true"
      data-v-f1d1dcbe=""
      eager="false"
      inline="false"
      maxwidth="120px"
      options="[object Object]"
      src="/src/assets/images/mr-evocon-maintenance.svg"
      tile="false"
      transition="fade-transition"
    />
  </div>
</v-card-stub>
`;
